--- a/stylesheet.less
+++ b/stylesheet.less
@@ -29,7 +29,7 @@
 
 
 .edit .bk-nav {
-	position: absolute;
+	position: fixed;
     right: -320px;
 }
 
